--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 
 /* Font Families
 font-family: 'Gilda Display', serif;
-
+font-family: 'Maven Pro', sans-serif;
 */ 
 
 * {
@@ -47,7 +47,7 @@ header h1 {
 }
 
 header div {
-    text-align: center;
+    text-align: left;
     height: 35vh; 
     width: 35vh;
     margin: 15vh auto; 
@@ -59,7 +59,7 @@ header div:hover {
     background: linear-gradient(to top right,#3dc8d5, #8507e1);
 }
 
-header div h2 {
+header div>h2 {
     font-size: 8vh;
     padding: 10% auto;
 }
@@ -85,3 +85,48 @@ header nav ul li {
 /* =======================
     Main Styles
 ======================= */
+
+main {
+    background-image: url('https://assets.website-files.com/5c8834f1555981170b2fd8b1/5c898cd67456ffcba141a5ff_PROJECTS.svg'); 
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat; 
+    
+}
+
+main article {
+    width: 30vw;
+    margin-top: 10%; 
+    margin-left: 20%;
+}
+
+main article h2 {
+    font-size: 8vh;
+    margin-bottom: 10%;
+}
+
+main article p:last-child {
+    margin-top: 3%; 
+}
+
+main section {
+    margin-top: 5%;
+    margin-left: 25%; 
+    
+}
+
+main section div img{
+    width: 45%;
+    border-radius: 10px; 
+    margin-bottom: 2%;
+}
+
+main section div h3 {
+    font-size: 4vh;
+    margin-bottom: 1%;
+}
+
+main section div p {
+    margin-bottom: 8%;
+    text-transform: uppercase;
+}
